--- a/scss/editor/_properties.scss
+++ b/scss/editor/_properties.scss
@@ -5,7 +5,7 @@ body {
 }
 
 @container metadata (width > 600px) {
-    .metadata-content:not(:is(body.is-grabbing .metadata-content:hover)) {
+    .metadata-content:not(body.is-grabbing .metadata-content:hover) {
         display: block;
         column-count: var(--properties-columns);
         column-rule: 1px dashed var(--metadata-border-color);
