--- a/scss/cssclasses/_family-tree.scss
+++ b/scss/cssclasses/_family-tree.scss
@@ -198,7 +198,7 @@ body {
     }
 
     // Remove upwards connectors if only child
-    ul:not(:is(.tag[href="#wed"], .wed) + ul) > li:only-child::after,
+    ul:not(.tag[href="#wed"], .wed + ul) > li:only-child::after,
     :is(.tag[href="#wed"], .wed) + ul > li:nth-child(2):last-child::after {
         content: none;
     }
