--- a/snippets/canvas/canvas-node-only-text.css
+++ b/snippets/canvas/canvas-node-only-text.css
@@ -6,7 +6,7 @@ Author: ElsaTam (Kapirklaa in Discord)
   box-shadow: none;
   background: none;
 }
-.canvas-node:has(.tag[href="#node-only-text"], .node-only-text):not(.is-editing):not(:is(.is-dragging, :hover)) .canvas-node-container {
+.canvas-node:has(.tag[href="#node-only-text"], .node-only-text):not(.is-editing):not(.is-dragging, *:hover) .canvas-node-container {
   border: none;
 }
 .canvas-node:has(.tag[href="#node-only-text"], .node-only-text):not(.is-editing) .canvas-node-content {
