--- a/snippets/canvas/canvas-node-title-neon.css
+++ b/snippets/canvas/canvas-node-title-neon.css
@@ -5,7 +5,7 @@ Author: ElsaTam (Kapirklaa in Discord)
 .canvas-node:has(.tag[href="#node-title-neon"], .node-title-neon):not(.is-editing) .canvas-node-container {
   border: none;
 }
-.canvas-node:has(.tag[href="#node-title-neon"], .node-title-neon):not(.is-editing):not(:is(.is-dragging, :hover)) .canvas-node-container {
+.canvas-node:has(.tag[href="#node-title-neon"], .node-title-neon):not(.is-editing):not(.is-dragging, *:hover) .canvas-node-container {
   box-shadow: none;
 }
 .canvas-node:has(.tag[href="#node-title-neon"], .node-title-neon):not(.is-editing) .canvas-node-content {
