--- a/snippets/cssclasses/columns.css
+++ b/snippets/cssclasses/columns.css
@@ -66,7 +66,11 @@ Author: ElsaTam (Kapirklaa in Discord)
     column-gap: 50px;
   }
 }
-:is(.columns-2, .columns-3, .columns-4).markdown-preview-view .markdown-preview-pusher, :is(.columns-2, .columns-3, .columns-4).markdown-preview-view .mod-header, :is(.columns-2, .columns-3, .columns-4).markdown-preview-view .mod-frontmatter, :is(.columns-2, .columns-3, .columns-4).markdown-preview-view :is(h1), :is(.columns-2, .columns-3, .columns-4).markdown-preview-view [alt~=span] {
+:is(.columns-2, .columns-3, .columns-4).markdown-preview-view .markdown-preview-pusher,
+:is(.columns-2, .columns-3, .columns-4).markdown-preview-view .mod-header,
+:is(.columns-2, .columns-3, .columns-4).markdown-preview-view .mod-frontmatter,
+:is(.columns-2, .columns-3, .columns-4).markdown-preview-view :is(h1),
+:is(.columns-2, .columns-3, .columns-4).markdown-preview-view [alt~=span] {
   column-span: all;
 }
 
