--- a/snippets/cssclasses/footer-img.css
+++ b/snippets/cssclasses/footer-img.css
@@ -82,10 +82,32 @@ body {
 }
 
 @media screen {
-  [class*=footer-img] {
+  .footer-img,
+  .footer-img-accent,
+  .footer-img-gray,
+  .footer-img-brown,
+  .footer-img-red,
+  .footer-img-orange,
+  .footer-img-yellow,
+  .footer-img-green,
+  .footer-img-cyan,
+  .footer-img-blue,
+  .footer-img-purple,
+  .footer-img-pink {
     background-color: var(--workleaves-background);
   }
-  [class*=footer-img] > .markdown-preview-section > div:nth-last-child(1 of div.el-p) {
+  .footer-img > .markdown-preview-section > div:nth-last-child(1 of div.el-p),
+  .footer-img-accent > .markdown-preview-section > div:nth-last-child(1 of div.el-p),
+  .footer-img-gray > .markdown-preview-section > div:nth-last-child(1 of div.el-p),
+  .footer-img-brown > .markdown-preview-section > div:nth-last-child(1 of div.el-p),
+  .footer-img-red > .markdown-preview-section > div:nth-last-child(1 of div.el-p),
+  .footer-img-orange > .markdown-preview-section > div:nth-last-child(1 of div.el-p),
+  .footer-img-yellow > .markdown-preview-section > div:nth-last-child(1 of div.el-p),
+  .footer-img-green > .markdown-preview-section > div:nth-last-child(1 of div.el-p),
+  .footer-img-cyan > .markdown-preview-section > div:nth-last-child(1 of div.el-p),
+  .footer-img-blue > .markdown-preview-section > div:nth-last-child(1 of div.el-p),
+  .footer-img-purple > .markdown-preview-section > div:nth-last-child(1 of div.el-p),
+  .footer-img-pink > .markdown-preview-section > div:nth-last-child(1 of div.el-p) {
     --image-shadow-offset: 0;
     position: sticky;
     bottom: -6px;
@@ -97,13 +119,35 @@ body {
     opacity: var(--footer-img-opacity);
     pointer-events: none;
   }
-  [class*=footer-img] > .markdown-preview-section > div:nth-last-child(1 of div.el-p) p {
+  .footer-img > .markdown-preview-section > div:nth-last-child(1 of div.el-p) p,
+  .footer-img-accent > .markdown-preview-section > div:nth-last-child(1 of div.el-p) p,
+  .footer-img-gray > .markdown-preview-section > div:nth-last-child(1 of div.el-p) p,
+  .footer-img-brown > .markdown-preview-section > div:nth-last-child(1 of div.el-p) p,
+  .footer-img-red > .markdown-preview-section > div:nth-last-child(1 of div.el-p) p,
+  .footer-img-orange > .markdown-preview-section > div:nth-last-child(1 of div.el-p) p,
+  .footer-img-yellow > .markdown-preview-section > div:nth-last-child(1 of div.el-p) p,
+  .footer-img-green > .markdown-preview-section > div:nth-last-child(1 of div.el-p) p,
+  .footer-img-cyan > .markdown-preview-section > div:nth-last-child(1 of div.el-p) p,
+  .footer-img-blue > .markdown-preview-section > div:nth-last-child(1 of div.el-p) p,
+  .footer-img-purple > .markdown-preview-section > div:nth-last-child(1 of div.el-p) p,
+  .footer-img-pink > .markdown-preview-section > div:nth-last-child(1 of div.el-p) p {
     margin: 0;
     background-color: var(--footer-img-color);
     mix-blend-mode: exclusion;
     color: white;
   }
-  [class*=footer-img] > .markdown-preview-section > div:nth-last-child(1 of div.el-p) img {
+  .footer-img > .markdown-preview-section > div:nth-last-child(1 of div.el-p) img,
+  .footer-img-accent > .markdown-preview-section > div:nth-last-child(1 of div.el-p) img,
+  .footer-img-gray > .markdown-preview-section > div:nth-last-child(1 of div.el-p) img,
+  .footer-img-brown > .markdown-preview-section > div:nth-last-child(1 of div.el-p) img,
+  .footer-img-red > .markdown-preview-section > div:nth-last-child(1 of div.el-p) img,
+  .footer-img-orange > .markdown-preview-section > div:nth-last-child(1 of div.el-p) img,
+  .footer-img-yellow > .markdown-preview-section > div:nth-last-child(1 of div.el-p) img,
+  .footer-img-green > .markdown-preview-section > div:nth-last-child(1 of div.el-p) img,
+  .footer-img-cyan > .markdown-preview-section > div:nth-last-child(1 of div.el-p) img,
+  .footer-img-blue > .markdown-preview-section > div:nth-last-child(1 of div.el-p) img,
+  .footer-img-purple > .markdown-preview-section > div:nth-last-child(1 of div.el-p) img,
+  .footer-img-pink > .markdown-preview-section > div:nth-last-child(1 of div.el-p) img {
     height: var(--footer-img-height);
     width: 100%;
     object-fit: cover;
@@ -111,7 +155,18 @@ body {
     filter: saturate(0);
     mix-blend-mode: luminosity;
   }
-  [class*=footer-img] > .markdown-preview-sizer {
+  .footer-img > .markdown-preview-sizer,
+  .footer-img-accent > .markdown-preview-sizer,
+  .footer-img-gray > .markdown-preview-sizer,
+  .footer-img-brown > .markdown-preview-sizer,
+  .footer-img-red > .markdown-preview-sizer,
+  .footer-img-orange > .markdown-preview-sizer,
+  .footer-img-yellow > .markdown-preview-sizer,
+  .footer-img-green > .markdown-preview-sizer,
+  .footer-img-cyan > .markdown-preview-sizer,
+  .footer-img-blue > .markdown-preview-sizer,
+  .footer-img-purple > .markdown-preview-sizer,
+  .footer-img-pink > .markdown-preview-sizer {
     padding-bottom: 0 !important;
   }
   .theme-dark [class*=footer-img] > .markdown-preview-section > div:nth-last-child(1 of div.el-p) {
