--- a/snippets/cssclasses/note-accent.css
+++ b/snippets/cssclasses/note-accent.css
@@ -80,7 +80,8 @@ body.theme-dark {
   --accent-l: var(--note-accent-6-l);
 }
 
-.markdown-source-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6), .markdown-preview-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6) {
+.markdown-source-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6),
+.markdown-preview-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6) {
   --color-accent-hsl: var(--accent-h), var(--accent-s), var(--accent-l);
   --color-accent: hsl(var(--accent-h), var(--accent-s), var(--accent-l));
   --color-accent-1: hsl(calc(var(--accent-h) - 3), calc(var(--accent-s) * 1.02), calc(var(--accent-l) * 1.15));
@@ -118,7 +119,8 @@ body.theme-dark {
 }
 
 /* Specific to the theme */
-.markdown-source-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6), .markdown-preview-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6) {
+.markdown-source-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6),
+.markdown-preview-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6) {
   --banner-slope-border-color: var(--color-accent);
 }
 
