--- a/snippets/editor/callouts/callout-letter.css
+++ b/snippets/editor/callouts/callout-letter.css
@@ -80,6 +80,12 @@ body {
 .callout[data-callout=letter] .callout-content {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5) inset, 0 0 7px rgba(0, 0, 0, 0.5) inset;
 }
+.callout[data-callout=letter] :is {
+  background-color: color-mix(in srgb, rgb(var(--callout-color)), var(--workleaves-background) 92%);
+  background-image: var(--paper-texture);
+  background-size: 500px;
+  background-blend-mode: multiply;
+}
 .callout[data-callout=letter] p {
   --calc-line-height: calc(1em * var(--line-height-normal));
   --line-start: calc(0.5 * var(--calc-line-height) + 0.5 * var(--font-text-size));
