--- a/snippets/editor/horizontal_rule.css
+++ b/snippets/editor/horizontal_rule.css
@@ -2,7 +2,8 @@
 FAS - Horizontal Rule
 Author: ElsaTam (Kapirklaa in Discord)
 */
-.markdown-source-view:not(.minimalist, .sci-fi) hr, .markdown-preview-view:not(.minimalist, .sci-fi) hr:not(.footnotes hr) {
+.markdown-source-view:not(.minimalist, .sci-fi) hr,
+.markdown-preview-view:not(.minimalist, .sci-fi) hr:not(.footnotes hr) {
   --hr-height: calc(1em * var(--line-height-normal));
   --ornament-size: calc(1em * var(--line-height-normal));
   --ornament-right: 60px;
